Avoid button shrinking when overflowing

--- a/src/components/TablePage.module.css
+++ b/src/components/TablePage.module.css
@@ -27,13 +27,19 @@
 }
 
 .buttonCell {
-  aspect-ratio: 1;
   background-color: #3489ca;
   border-left: 1px solid #9e9e9e;
+  padding: 0;
+}
+
+.button {
+  align-items: center;
+  background-color: #3489ca;
   color: white;
   cursor: pointer;
+  display: flex;
   height: 2em;
+  justify-content: center;
   padding: 0;
-  text-align: center;
   width: 2em;
 }
